fixed spacings

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+}
+
 body {
   font-family: synthese, sans-serif;
   font-weight: 400;
@@ -40,10 +44,12 @@ body {
 .t-text {
   font-size: 24px;
   line-height: 36px;
+  display: inline-block;
 }
 
 .t-caption {
   opacity: 60%;
+  display: inline-block;
 }
 
 .t-color-accent {
@@ -71,7 +77,7 @@ body {
 }
 
 .c-link .link-icon {
-  margin: 4px 0 0 4px;
+  margin: 2px 0 0 4px;
   fill: currentColor;
 }
 
@@ -79,7 +85,7 @@ body {
   width: 100%;
 }
 
-.c-picture .c-picture-captio {
+.c-picture .c-picture-caption {
   margin-top: 8px;
 }
 
@@ -96,6 +102,7 @@ body {
   width: 100%;
   justify-content: space-between;
   align-items: flex-start;
+  margin-top: 8px;
 }
 
 .c-card .c-link {
@@ -104,14 +111,14 @@ body {
   margin-left: 16px;
 }
 
-.c-contacts-links * {
+.c-contacts-links *:not(:last-child) {
   display: block;
   margin-bottom: 8px;
 }
 
 /* LAYOUT */
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 729px) {
   .l-logo {
     grid-column: 1 / 5;
   }
@@ -160,6 +167,8 @@ body {
 
   .l-contacts-heading {
     grid-column: 1 / 7;
+
+    margin-bottom: 16px;
   }
 
   .l-contacts-links {
@@ -183,7 +192,7 @@ body {
   }
 }
 
-@media screen and (min-width: 731px) and (max-width: 1100px) {
+@media screen and (min-width: 730px) and (max-width: 1100px) {
   .l-logo {
     grid-column: 1 / 5;
   }
